--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,15 @@ hasCJKLanguage = true
     # 当你将鼠标悬停在此菜单链接上时, 将显示的标题
     title = ""
   
+  [[menu.main]]
+    weight = 2
+    identifier = "tags"
+    pre = ""
+    post = ""
+    name = "tags"
+    url = "/tags/"
+    title = ""
+  
 
 [params]
   # 网站默认主题样式 ["auto", "light", "dark"]
